syntax = "proto3";

option java_multiple_files = true;
option java_package = "services.smartMeeting";

package services.smartMeeting;

// Service Methods
service SmartMeetingRoom {
  rpc BookRoom (BookRoomRequest) returns (ActionResponse) {}
  rpc CancelBooking (CancelBookingRequest) returns (ActionResponse) {}
  rpc CheckAvailability (CheckAvailabilityRequest) returns (AvailabilityResponse) {}
}

// Utility Types
enum RoomStatus {
  UNAVAILABLE = 0;
  AVAILABLE = 1;
  OCCUPIED = 2;
}

message RoomDetails {
  int32 roomId = 1;
  string location = 3;
}

message ActionResponse {
  bool success = 1;
  ErrorCode error_code = 2;
}

enum ErrorCode {
  NONE = 0;
  ACCESS_DENIED = 1;
  DOOR_NOT_FOUND = 2;
  SYSTEM_ERROR = 3;
}

// Request/Response Types
message BookRoomRequest {
  int32 roomId = 1;
  int32 userId = 2;
  string timeSlot = 3;
}

message CancelBookingRequest {
  int32 bookingId = 1;
}

message CheckAvailabilityRequest {
  int32 roomId = 1;
  string timeSlot = 2;
}

message AvailabilityResponse {
  bool success = 1;
  RoomStatus status = 2;
  RoomDetails details = 3;
  repeated string availableTimes = 4;
}